apply to the rests

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -24,7 +24,8 @@ jobs:
         run: |
           haxelib --global install hmm
           haxelib --global run hmm setup
-          hmm install
+          haxelib run hmm install
+          haxelib run lime rebuild extension-webm windows
           haxelib list
           haxelib run lime build windows
           
